test/libyul/yulSyntaxTests/loadimmutable_shadowing.yul
{
    function loadimmutable(a) {}
}
// ====
// dialect: qrvm
// ----
// ParserError 5568: (15-28): Cannot use builtin function name "loadimmutable" as identifier name.
